# esp-idf

./: .gitmodules
components/esp_hal_i2s/esp32c6/include/hal/: i2s_ll.h
components/openthread/: CMakeLists.txt  Kconfig.projbuild
components/openthread/private_include/: cse299a_encryption_flags.h  openthread-core-esp32x-ftd-config.h  openthread-core-esp32x-mtd-config.h  thread_ascon_encryption_flags.h
components/openthread/src/port/: cse299a_encryption_debug.c  esp_openthread_radio.c  esp_openthread_radio_spinel.cpp
examples/peripherals/lcd/rgb_panel/main/: idf_component.yml
